[project]
name = "rvrl"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "loguru",
    "rich",
    "rootutils",
    "torch",
    "torchvision",
    "tqdm",
    "tyro",
    "tensorboard",
]

[project.optional-dependencies]
dm_control = [
    "dm_control==1.0.11",
    "shimmy==1.1.0",
    "mujoco==2.3.3",
    "gymnasium<1",
    "numpy<2",
]
isaaclab = [
    "torch==2.5.1+cu118",
    "torchvision==0.20.1+cu118",
    "isaacsim[all,extscache]==4.5.0",
]

[tool.ruff]
line-length = 120
format.preview = true
lint.preview = false
target-version = "py38"
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "FA",   # flake8: future annotations
    "UP",   # pyupgrade
    "NPY",  # numpy-specific rules
]
lint.ignore = [
    "E266",  # allow multiple leading # in comments
    "E402",  # allow imports not at the top of the file
    "E501",  # allow long lines
    "E722",  # allow bare except
    "F403",  # allow `from module import *`
    "F841",  # allow unused variable
    "UP031",  # allow `%` to be used to format strings
    "NPY002",  # allow legacy `numpy.random` functions
]

[tool.ruff.lint.per-file-ignores]
"src/envs/isaaclab_env.py" = ["FA"]  # isaaclab only supports Python 3.10

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.pip]
extra-index-url = [
    "https://pypi.org/simple",
    "https://download.pytorch.org/whl/cu118",
    "https://pypi.nvidia.com",
]
