[project]
name = "rvrl"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "gymnasium==0.29.1",
    "loguru",
    "rich",
    "tensorboard",
    "torch",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "tyro",
]

[project.optional-dependencies]
dmc = [
    "dm_control==1.0.31",
    "mujoco==3.3.3",
]
isaaclab = [
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "isaacsim[all,extscache]==4.5.0",
]
isaacgym = [
    "isaacgym @ file:${PROJECT_ROOT}/third_party/isaacgym/python",
    "IsaacGymEnvs @ file:${PROJECT_ROOT}/third_party/IsaacGymEnvs",
]

[tool.ruff]
line-length = 120
format.preview = true
lint.preview = false
target-version = "py38"
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "FA",   # flake8: future annotations
    "UP",   # pyupgrade
    "NPY",  # numpy-specific rules
]
lint.ignore = [
    "E266",  # allow multiple leading # in comments
    "E402",  # allow imports not at the top of the file
    "E501",  # allow long lines
    "E722",  # allow bare except
    "F403",  # allow `from module import *`
    "F841",  # allow unused variable
    "UP031",  # allow `%` to be used to format strings
    "NPY002",  # allow legacy `numpy.random` functions
]

[tool.ruff.lint.per-file-ignores]
"rvrl/envs/isaaclab_env.py" = ["FA"]  # isaaclab only supports Python 3.10

[tool.uv]
index-strategy = "unsafe-first-match"

[tool.uv.pip]
extra-index-url = [
    "https://pypi.org/simple",
    "https://download.pytorch.org/whl/cu121",
    "https://pypi.nvidia.com",
]
